# multimon-ng

./: .clang-format  .gitignore  BCH26.c  BCH26.h  BCHCode.c  BCHCode.h  BCHCode_stub.c  CMakeLists.txt  Makefile  README  README.md  bch.c  bch.h  bch_stub.c  cir.c  clip.c  costabf.c  costabi.c  demod_afsk12.c  demod_afsk24.c  demod_afsk24_2.c  demod_afsk24_3.c  demod_ccir.c  demod_cirfsk.c  demod_clipfsk.c  demod_display.c  demod_dtmf.c  demod_dumpcsv.c  demod_dzvei.c  demod_eas.c  demod_eea.c  demod_eia.c  demod_flex.c  demod_flex_next.c  demod_fms.c  demod_fmsfsk.c  demod_fsk96.c  demod_hapn48.c  demod_morse.c  demod_poc12.c  (+46 more)
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: c-code.instructions.md  demodulators.instructions.md  generators.instructions.md  tests.instructions.md
.github/workflows/: ccpp.yml  cmake.yml  copilot-setup-steps.yml  macos.yml  mingw32.yml  mingw64.yml  qmake.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  multimon-ng
build-mingw32/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw64/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: toolchain-mingw32.cmake  toolchain-mingw64.cmake
demo/: generate_demo.sh
example/: POCSAG_sample_-_1200_bps.flac  POCSAG_sample_-_2400_bps.flac  README-dumpcsv.txt  dumpcsv_png.txt  multipager.py
test/: run_tests.sh
test/lib/: helpers.sh
test/samples/: POCSAG_sample_-_512_bps.flac  ufsk1200.raw
test/samples/bch_reference/: flex_1bit.raw  flex_2bit.raw  flex_clean.raw  pocsag_1bit.raw  pocsag_2bit.raw  pocsag_clean.raw  pocsag_inv_1bit.raw  pocsag_inv_2bit.raw  pocsag_inv_clean.raw
unsupported/: Makefile.legacy  multimonNG.vcxproj
